Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = "text"
            output "passed"
        end
    end
end
