Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(Object var)
    end
end
